create a config folder fo r organization

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,7 +6,7 @@
 - clean: ['~']
 
 - link:
-    ~/.zshrc: zshrc
+    ~/.zshrc: config/zshrc
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
